yet another bug with overflow eieieiei

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -4,9 +4,12 @@
   height: 90%;
   z-index: 2;
   margin: 2em 2em 3em 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
-.card_content::-webkit-scrollbar {
+.card_content::-webkit-scrollbar,
+.card::-webkit-scrollbar {
   display: none;
 }
 
